--- a/feature-pack/pom.xml
+++ b/feature-pack/pom.xml
@@ -1256,6 +1256,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.spec.javax.faces</groupId>
+            <artifactId>jboss-jsf-api_2.3_spec</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.spec.javax.jms</groupId>
             <artifactId>jboss-jms-api_2.0_spec</artifactId>
         </dependency>
