--- a/spec-api/pom.xml
+++ b/spec-api/pom.xml
@@ -70,6 +70,10 @@
       <artifactId>jboss-jsf-api_2.2_spec</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jboss.spec.javax.faces</groupId>
+      <artifactId>jboss-jsf-api_2.3_spec</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.spec.javax.interceptor</groupId>
       <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
     </dependency>
