[WFLY-10339]: Broadcast/discovery-group resources have ambiguous requirement specs.
* Adding 6 new resources to have specific boradcast and discovery groups
using socket-bindings or cluster connections
* Updating the schema for these new resources
* Requires connectors for broadcast-group resource

Jira:
https://issues.jboss.org/browse/WFLY-10339
https://issues.jboss.org/browse/WFLY-6607
https://issues.jboss.org/browse/WFLY-11005

--- a/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
+++ b/messaging-activemq/src/main/resources/org/wildfly/extension/messaging/activemq/LocalDescriptions.properties
@@ -98,6 +98,8 @@ broadcast-group.start=Starts the broadcast group.
 broadcast-group.started=Whether the broadcast group is started.
 broadcast-group.stop=Stops the broadcast group.
 broadcast-group=A broadcast group is the means by which a server broadcasts connectors over the network.
+jgroup-broadcast-group=A broadcast group is the means by which a server broadcasts connectors over the network using JGroup cluster configuration.
+socket-broadcast-group=A broadcast group is the means by which a server broadcasts connectors over the network using socket bindings.
 external-jms-queue.add=Add a client JMS queue.
 external-jms-queue.entries=The jndi names the queue will be bound to.
 external-jms-queue.remove=Remove a client JMS queue.
@@ -247,6 +249,8 @@ discovery-group.refresh-timeout=Period the discovery group waits after receiving
 discovery-group.remove=Remove a discovery group.
 discovery-group.socket-binding=The discovery group socket binding.
 discovery-group=Multicast group to listen to receive broadcast from other servers announcing their connectors.
+jgroup-discovery-group=Multicast group to listen to receive broadcast from other servers announcing their connectors using JGroup cluster configuration.
+socket-discovery-group=Multicast group to listen to receive broadcast from other servers announcing their connectors using socket bindings.
 divert.add=Operation adding a divert
 divert.divert-address=Address to divert from
 divert.exclusive=Whether the divert is exclusive, meaning that the message is diverted to the new address, and does not go to the old address at all.
